# LESI_VC_2324

./: .gitignore  CMakeLists.txt  README.md
include/: image_processing.h  image_processor.h  resistor_detection.h  utils.h  video_processor.h
src/: image_processing.cpp  image_processor.cpp  main.cpp  resistor_detection.cpp  utils.cpp  video_processor.cpp
